--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "gulp-connect": "^5.7.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
-    "spritesmith": "^3.3.1"
+    "gulp.spritesmith": "^6.9.0"
   }
 }
